THRIFT-4164: update openssl cleanup to match current requirements and document TSSLSocketFactory lifetime requirements